--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -30,6 +30,9 @@
     --background-navbar-rgb: #1e293b;
     --background-navbar-hover-rgb: #073e62;
 
+    --background-card: #1e293b;
+    --border-card: #334155;
+
     --navbar-min-height: 45px;
 
     --dropdown-menu-border: rgb(100, 100, 100);
@@ -39,5 +42,6 @@
 body {
   background: var(--background);
   color: var(--font-color-primary);
+  font-size: 20px;
   font-family: Arial, Helvetica, sans-serif;
 }
