Notfound pages with Navbar, Projects and Formation Sections in Homepage

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -32,6 +32,7 @@
 
     --background-card: #1e293b;
     --border-card: #334155;
+    --background-card-secondary: #334155;
 
     --navbar-min-height: 45px;
 
