Mobile navbar responsive

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -38,7 +38,7 @@
 
     --navbar-min-height: 45px;
 
-    --dropdown-menu-border: rgb(100, 100, 100);
+    --dropdown-menu-border: #475569;
   }
 }
 
